# nsv-python

./: .gitignore  CROSS_VALIDATION_REPORT.md  INTEGRATION_PLAN.md  MANIFEST.in  PUBLISHING.md  README.md  RUST_BENCHMARK_RESULTS.md  RUST_INTEGRATION.md  STREAMING_ANALYSIS.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  tests.yml  wheels.yml
benchmarks/: micro_bench.py  python_vs_rust.py
examples/: 1_original_2d.nsv  2_after_first_lift.nsv  2_after_lift.nsv  3_after_double_lift.nsv  3_after_second_lift.nsv  3d_all_matrices_lift2.nsv  3d_all_matrices_lift3.nsv  3d_combined.nsv  3d_matrix_0.nsv  3d_matrix_0_lift1.nsv  3d_matrix_1.nsv  3d_matrix_1_lift1.nsv  3d_triple_lift.nsv  README.md  combined_2d.nsv  demonstrate_lift.py  final_1d.nsv  matrix_0_lifted.nsv  matrix_1_lifted.nsv
nsv/: __init__.py  _python.py  _python_impl.py  core.py  ensv.py  reader.py  util.py
rust/: Cargo.toml
rust-ext/: Cargo.toml  README.md
rust-ext/src/: lib.rs
rust/src/: lib.rs
tests/: cross_validate.py  test_bytes.py  test_edge_cases.py  test_encoding_theory.py  test_ensv.py  test_incremental.py  test_lift.py  test_pandas.py  test_streaming.py  test_utils.py  test_writer_escaping.py
tests/samples/: basic.nsv  escape_edge_cases.nsv  trailing_backslash.nsv
