[build-system]
# setuptools-rust is intentionally NOT listed here: the default build is
# pure-Python and produces a py3-none-any wheel. To build the Rust extension,
# install setuptools-rust into the build env and set NSV_BUILD_RUST=1, e.g.
#   pip install build setuptools-rust
#   NSV_BUILD_RUST=1 python -m build --wheel --no-isolation
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
