[build-system]
requires = ["setuptools>=61.0", "setuptools-rust>=1.0"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build = "cp312-*"
environment = { NSV_BUILD_RUST = "1" }

[tool.cibuildwheel.linux]
archs = ["auto64"]
before-all = "curl -sSf https://sh.rustup.rs | sh -s -- -y"
environment = { NSV_BUILD_RUST = "1", PATH = "$HOME/.cargo/bin:$PATH" }
